--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 body {
     background-color: #f9f9f9;
-    padding: 4% 8%;
+    padding: 4% 4%;
     line-height: 1.8;
     letter-spacing: .03em;
     font-size: 1em;
@@ -10,8 +10,6 @@ body {
 }
 
 .landing-text {
-        
-    float: center;
     text-align: center;
     max-width: 400px;
     height: 100%;
@@ -23,24 +21,22 @@ body {
     color: #b1daeb;
 }
 
-.text-box {
-    padding: 2% 2%;
-    float: left;
+.about-text-box {
+    padding: 0% 2%;
     text-align: left;
     max-width: 400px;
     background-color: #fff;
     height: 100%;
     color: #95c7f5;
-    }
+}
 
-.text-box p { 
+.about-text-box p { 
     color: #102d63;
 }
 
 .portfolio-text-box { 
     margin: 7% 0;
-    padding: 2% 2%;
-    float: left;
+    padding: 0% 2%;
     text-align: left;
     max-width: 400px;
     background-color: #fff;
@@ -57,8 +53,7 @@ h3 {
 }
 .portfolio-description-text-box {
     margin: 7% 0;
-    padding: 2% 2%;
-    float: left;
+    padding: 1% 2%;
     text-align: left;
     max-width: 400px;
     background-color: #fff;
@@ -76,8 +71,7 @@ h5 {
 
 .experience-text-box {
     margin: 7% 0;
-    padding: 2% 2%;
-    float: left;
+    padding: 0% 2%;
     text-align: left;
     max-width: 400px;
     background-color: #fff;
@@ -98,7 +92,7 @@ h4 {
 
 .contact-text-box {
     margin: 7% 0;
-    padding: 2% 2%;
+    padding: 0% 2%;
     float: left;
     text-align:center;
     max-width: 400px;
@@ -109,26 +103,23 @@ h4 {
 }
 
 .nav-list {
-    display: block;
     text-align: center;
-    list-style-type: none;
-    margin: auto;
+    margin: 0 auto;
     padding: 0;
     overflow: hidden;
-    background-color: #102d63;
+    background-color: #f9f9f9;
     max-width: 400px;
 }
     
 li {
-    display: inline-block;
+    display: block;
 }
     
 li a {
-    display: inline-block;
-    margin-left: 1.5px;
+    display: block;
     text-align: center;
-    color: white;
-    padding: 14px 10px 14px 10px;
+    color: #102d63;
+    padding: 14px 10px;
     text-decoration: none;
     font-size: 10px;
 }
@@ -167,3 +158,10 @@ li a:hover {
     color: #102d63;
 }
 
+img {
+    max-width: 350px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+}
