--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,7 @@ body {
     max-width: 400px;
     height: 100%;
     color: #102d63;
-    font-size: 1.5em;
+    font-size: 1.3em;
 }
 
 .landing-text h6 {
@@ -163,5 +163,7 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    padding: 10px;
+    padding: 3px 5px;
 }
+
+
